--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,10 @@
 {
-  "extends": []
+  "extends": [],
+  "parserOptions": {
+      "ecmaVersion": 2017
+  },
+
+  "env": {
+      "es6": true
+  }
 }
